--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,6 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 .kotlin
-*.log
-config.properties
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
@@ -40,3 +38,7 @@ build/
 
 ### Mac OS ###
 .DS_Store
+
+### App ###
+*.log
+src/main/resources/config.properties
